[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "omegaconf>=2.3.0",
    "pip>=24.3.1",
    "pydantic>=2.10.4",
    "ruff>=0.8.6",
]
