[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.36",
    "numpy>=2.2.1",
    "omegaconf>=2.3.0",
    "pip>=24.3.1",
    "pydantic>=2.10.4",
    "pyright>=1.1.391",
    "ruff>=0.8.6",
    "scipy>=1.15.0",
]
